ProcessParser.jj
options{
    STATIC=false;
}

PARSER_BEGIN(ProcessParser)
    import java.lang.*;
    import java.io.*;
    import java.util.*;

    public class ProcessParser{
        public static void print(String path) throws IOException{
            File file = new File(path);
            BufferedReader br = new BufferedReader(new FileReader(file));
            try{
                ProcessParser pp = new ProcessParser(br);
                pp.compilation_unit();
            }catch(ParseException ex){
                System.out.println(ex);
            }
        }
    }
PARSER_END(ProcessParser)
    
SKIP :
{
          " "
        | "\r"
        | "\t"
        | "\f"
        | "\n"
              
}

TOKEN :
{
          <LC: "(">
        | <RC: ")">
        | <COM: ",">  
        | <SM: ";">
        | <EQ: "=">
        | <WQ: "\"">
        | <STRING: "String">
        | <DATASET :  "DataSet">
        | <GRAPH: "Graph">
        | <DB: "DB">

}

TOKEN :{
          <IDENTIFIERS: ["a"-"z","A"-"Z","_"](["a"-"z","A"-"Z","_","0"-"9"])*>
        }
TOKEN :{
          <STR: ["a"-"z","A"-"Z","_"](["a"-"z","A"-"Z","_","0"-"9","="])*>
}


void compilation_unit(): {
}
{
    condition()
        expression()
}

void condition():{
    String str;
}
{
    str = assignment(){System.out.println(str);}
}

String assignment():{
    String t,t1;
}
{
    t = expressionName()
        <EQ>
        <WQ>
        t1 = assignmentExp()
        <WQ>
        <SM>
        {return t + " = \"" + t1+"\";";}
}

String expressionName():{
    Token t;
}
{
    t = <IDENTIFIERS>
        {return t.image;}
}

String assignmentExp():{
    Token t;
}
{
    t = <STR>{return t.image;}
}

void expression():{
    String exp="";
}
{
    exp = graphExpression()<SM>
        {System.out.println(exp+";");}
}

String graphExpression():{
    String data_exp;
    Token graph_type;
}
{
        <GRAPH>
        <LC>
        data_exp = dataExpression()
        <COM>
        <WQ>
        graph_type = graphType()
        <WQ>
        <RC>
        { return "Graph.print("+data_exp+","+graph_type.image+")"; }
}



String dataExpression():{
    String data_exp = "";
}
{
    data_exp = dbExpression()
        {return data_exp;}
}

String processExpression():{
    Token name;
    String input;
}
{
    name = processName()
               <LC>
       input = input()
               <RC>
        {return name.image + "("+input+")";}
}

String input():{
    String exp1="",exp2="";
}
{
    exp1 = dataExpression()
        {return exp1;}
        |
        <COM>
        exp2 = dataExpression()
            {return exp1 + ","+exp2;}
}

String dbExpression():{
    String db_input;
}
{
    <DB>
        <LC>
        db_input = dbInput()
        <RC>
        {
            return "DB("+db_input+")";
        }
}
String dbInput():{
    Token table_name,x_asix,y_asix,condition;
}
{
                     <WQ>
        table_name = tableName()
                     <WQ>
        <COM>
                     <WQ>
        x_asix = xAsix()
                     <WQ>
        <COM>
                     <WQ>
        y_asix = yAsix()
                     <WQ>
        <COM>
        condition = <IDENTIFIERS>
        { return table_name.image+","+x_asix.image+","+y_asix.image+","+condition.image;}
        
}

Token graphType():{
    Token t;
}{
    t = <IDENTIFIERS>{return t;}
}
Token tableName():{
    Token t;
}{
    t = <IDENTIFIERS>{return t;}
}
Token xAsix():{
    Token t;
}{
    t = <IDENTIFIERS>{return t;}
}
Token yAsix():{
    Token t;
}{
    t = <IDENTIFIERS>{return t;}
}
Token processName():{
    Token t;
}{
    t = <IDENTIFIERS>{return t;}
}    
